2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Update libport
	* src/console.cc: .

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Fix UValue constructions
	* src/uexpression.cc: here.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	More UValue ctor uses
	* src/uexpression.cc: here.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Use ctors
	* src/uvalue.hh: Comment changes.
	* src/uexpression.cc (UExpression::eval): Use the ctors instead
	of constructing by hand, and without telling the object...

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Scope shortening
	* src/uexpression.cc: here.
	Use ?:.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	No longer alias urbi::UBlendType, just use it
	* src/utypes.hh: No longer alias it and its members.
	* src/ucommand.cc, src/userver.cc, src/uvariable.cc,
	* src/uvariable.hh: Adjust.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Coding style
	* src/uexpression.cc: Use shorten argument names that don't
	conflict with the member names.
	Simplify accordingly.
	Translate comments into asserts.
	Simplify the logic of the bin expression case.

2007-01-19  Akim Demaille  <demaille@gostai.com>

	-Werror
	* configure.ac: Now handled by URBI_PROG_CXX.

2007-01-19  Matthieu Nottale  <nottale@gostai.com>

	Add missing lock in block memory manager. Fix a double delete when a variable with function scope is deleted. Replace some ustring by std::string
	* src/memorymanager/blockmemorymanager.hh: BlockMemoryManager now inherits lockable.
	* src/memorymanager/memorymanager.cc: Lock all calls.
	* src/ucallid.cc: Register the ucallid to the variables in his list. Add a remove call
	* src/ucallid.hh: Idem.
	* src/ucommand.cc: Fix for uvariable/uvariablename modifications.
	* src/uconnection.cc: Fix for uvariable/uvariablename modifications.
	* src/uexpression.cc: Fix for uvariable/uvariablename modifications.
	* src/uobj.cc: Fix for uvariable/uvariablename modifications.